--- a/aula2/receita.html
+++ b/aula2/receita.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS - forma de utilizar</title>
-    <link rel="stylesheet" href="css/receita.css"> <!--Externo -> Menor prioridade-->
+    <link rel="stylesheet" href="css/receita.css"> <!--Externo -> Menor prioridade, porém o mais indicado no dia a dia. Sempre que possível deixe suas regras css em arquivos externos-->
     <style>
         div {
           height: 100px; 
