--- a/extra/exercicio/exercicio.html
+++ b/extra/exercicio/exercicio.html
@@ -17,12 +17,12 @@
         }
 
         header {
-            height: 20vh;
+            height: 120px   ;
             position: relative;
         }
 
         .apresentacao {
-            height: 18vh;
+            height: 100px;
             width: 100%;
             box-sizing: border-box;
             position: absolute;
@@ -52,7 +52,7 @@
         }
 
         main {
-            height: 70vh;
+            height: 600px;
             background-color: white;
             display: flex;
             flex-direction: column;
@@ -68,8 +68,8 @@
 
         .academia,
         .experiencia {
-            height: 30vh;
-            width: 40%;
+            height: 180px;
+            width: 200px;
             border-radius: 10px;
             box-shadow: 2px 7px 6px rgb(0 0 0 / 30%);
         }
@@ -80,8 +80,8 @@
         }
 
         .skills {
-            height: 30vh;
-            width: 90%;
+            height: 180px;
+            width: 500px;
             border-radius: 10px;
             box-shadow: 2px 7px 6px rgb(0 0 0 / 30%);
             box-sizing: border-box;
@@ -97,8 +97,9 @@
         }
 
         footer {
-            height: 6vh;
+            height: 60px;
             box-sizing: border-box;
+            background-color: white;
         }
 
         footer img {
@@ -108,6 +109,7 @@
 
         .conteudo {
             width: 600px;
+            height: 750px;
             background-color: white;
         }
 
