--- a/extra/exercicio/exercicio.html
+++ b/extra/exercicio/exercicio.html
@@ -11,9 +11,11 @@
             margin: 0;
             display: flex;
             justify-content: center;
+            align-items: center;
             font-family: "Times New Roman", Times, serif;
             font-size: 15px;
             background-color: #e1e1e1;
+            height: 100vh;
         }
 
         header {
@@ -52,11 +54,11 @@
         }
 
         main {
-            height: 600px;
+            height: 400px;
             background-color: white;
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: flex-start;
         }
 
         .linha-1,
@@ -109,8 +111,9 @@
 
         .conteudo {
             width: 600px;
-            height: 750px;
+            height: 585px;
             background-color: white;
+            box-shadow: 2px 7px 6px rgb(0 0 0 / 30%);
         }
 
         ul {
