--- a/extra/exercicio/exercicio.html
+++ b/extra/exercicio/exercicio.html
@@ -79,6 +79,7 @@
         .academia p,
         .experiencia p {
             font-weight: 700;
+            text-align: center;
         }
 
         .skills {
