--- a/login-responsive/index.html
+++ b/login-responsive/index.html
@@ -14,6 +14,9 @@
     <main class="principal">
         <section class="logo">
             <img src="img/logo.jpg" alt="meu-logo" class="logo-img">
+            <div class="logo-texto">
+                um texto bem chamativo
+            </div>
 
         </section>
         <section class="formulario">
